--- a/slides/speaker.html
+++ b/slides/speaker.html
@@ -3,11 +3,11 @@
     <img src="./resources/speaker.jpg" alt="@cortezcristian" class="profile" />
 </div>
 <div class="col-75" style="padding: 10px">
-    <h2 class="call-title">@cortezcristian</h2>
+    <h2>Cristian Cortez</h2>
     <p>
     <span class="tag">+ 8y </span> Developer |
     <span class="tag">+ 4y </span> Trainer
     </p>
-    <p> Full Stack Dev | JS Fanboy </p>
-    <p> Ionic Developer </p>
+    <p> Full Stack + Ionic Developer </p>
+    <a href="https://twitter.com/cortezcristian">@cortezcristian</a>
 </div>
