--- a/slides/ionic-as-market-solution.html
+++ b/slides/ionic-as-market-solution.html
@@ -1,3 +1,3 @@
-<h2>Ionic as Market Solution</h2>
+<h2>Hybrid Mobile Apps</h2>
 
-<p>Please change me!</p>
+<p>Ionic as the obvious Market Solution</p>
