Adding info about hybrid

--- a/slides/ionic-client.html
+++ b/slides/ionic-client.html
@@ -2,7 +2,7 @@
 
 <pre class="ionic-blue">
     <code class="fragment">$ npm install -g ionic cordova</code>
-    <code class="fragment">$ ionic start myapp sidemenu</code>
-    <code class="fragment">$ cd myapp</code>
+    <code class="fragment">$ ionic start demoapp sidemenu</code>
+    <code class="fragment">$ cd demoapp</code>
     <code class="fragment">$ ionic serve</code>
 </pre>
