--- a/slides/stack-overflow-survey-results.html
+++ b/slides/stack-overflow-survey-results.html
@@ -10,7 +10,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="text-left">Mobile developer (all)</td>
+      <td class="text-left">Mobile developers</td>
       <td>9.1%</td>
       <td>8.4%</td>
     </tr>
