Adding continuous deployment

--- a/slides/ionic-upload.html
+++ b/slides/ionic-upload.html
@@ -1,4 +1,4 @@
-<h2>Ionic Upload</h2>
+<h2>Uploading / Viewing</h2>
 
 <pre class="ionic-blue">
     <code class="fragment">$ ionic login # create account first</code>
@@ -7,5 +7,5 @@
 </pre>
 
 <p>
-    <a class="link" href="http://ionicframework.com/docs/cli/uploading_viewing.html">Uploading / Viewing</a>
+    <a class="link" href="http://blog.ionic.io/invite-a-friend/">Invite a friend to your Ionic App</a>
 </p>
