Adding more tips

--- a/slides/ionic-box.html
+++ b/slides/ionic-box.html
@@ -10,3 +10,6 @@ Ionic Box is a ready-to-go hybrid development environment (based on Vagrant) for
 <p>
     <a class="link" href="https://github.com/driftyco/ionic-box">Ionic Box</a>
 </p>
+<p>
+    <a class="link" href="http://digitaldrummerj.me/ionicbox-notes/">Notes</a>
+</p>
