Android publishing and generator ionic

--- a/slides/publish-android-market.html
+++ b/slides/publish-android-market.html
@@ -23,7 +23,7 @@
         <code class="fragment" style="font-size: 22px;">$ # publish app on google play</code>
     </pre>
     <br />
-    <a class="link" href="http://ionicframework.com/docs/guide/installation.html">
-        Ionic Guide
+    <a class="link" href="http://ionicframework.com/docs/guide/publishing.html">
+        Android Publishing
     </a>
 </p>
