Adding missing definitions

--- a/slides/html5.html
+++ b/slides/html5.html
@@ -1,12 +1,12 @@
-<h2 class="hide">AngularJS</h2>
+<h2 class="hide">HTML5 & CSS3</h2>
 
 <p><img src="../resources/html5-css3.png" style="height:220px" /></p>
 
 <p>
-AngularJS is an open-source web application framework mainly maintained by Google to address many of the challenges encountered in developing SPA.
+Local Storage, Audio, Video, Animations...
 </p>
 
 
 <p>
-    <a class="link" href="https://angularjs.org/">AngularJS</a>
+    <a class="link" href="http://code.tutsplus.com/tutorials/28-html5-features-tips-and-techniques-you-must-know--net-13520">HTML5 Features and Tips</a>
 </p>
