--- a/slides/gulpjs.html
+++ b/slides/gulpjs.html
@@ -1,12 +1,12 @@
-<h2 class="hide">AngularJS</h2>
+<h2 class="hide">GulpJS</h2>
 
 <p><img src="../resources/gulp.jpg" style="height:160px" /></p>
 
 <p>
-AngularJS is an open-source web application framework mainly maintained by Google to address many of the challenges encountered in developing SPA.
+Gulp is a javascript task runner that lets you automate tasks such as building, minifying, live reload, pre-process files and more...
 </p>
 
 
 <p>
-    <a class="link" href="https://angularjs.org/">AngularJS</a>
+    <a class="link" href="http://gulpjs.com/">GulpJS</a>
 </p>
