--- a/slides/sass.html
+++ b/slides/sass.html
@@ -1,12 +1,12 @@
-<h2 class="hide">AngularJS</h2>
+<h2 class="hide">Sass</h2>
 
 <p><img src="../resources/sass.png" style="height:160px" /></p>
 
 <p>
-AngularJS is an open-source web application framework mainly maintained by Google to address many of the challenges encountered in developing SPA.
+An extension of CSS that adds power and elegance to the basic language. It allows to use variables, nested rules, mixins, inline imports, and more...
 </p>
 
 
 <p>
-    <a class="link" href="https://angularjs.org/">AngularJS</a>
+    <a class="link" href="http://sass-lang.com/">Sass</a>
 </p>
