--- a/slides/angularjs.html
+++ b/slides/angularjs.html
@@ -1,6 +1,6 @@
 <h2 class="hide">AngularJS</h2>
 
-<p><img src="../resources/angularjs-large.png" style="height:160px" /></p>
+<p><img src="./resources/angularjs-large.png" style="height:160px" /></p>
 
 <p>
 AngularJS is an open-source web application framework mainly maintained by Google to address many of the challenges encountered in developing SPA.
