--- a/slides/cordova.html
+++ b/slides/cordova.html
@@ -1,6 +1,6 @@
 <h2 class="hide">Cordova</h2>
 
-<p><img src="../resources/cordova.png" style="height:180px" /></p>
+<p><img src="./resources/cordova.png" style="height:180px" /></p>
 
 <p>
 Apache Cordova is an open-source mobile development framework.
