--- a/slides/generator-ionic.html
+++ b/slides/generator-ionic.html
@@ -1,6 +1,6 @@
 <h2 class="hide">Ionic Generator</h2>
 
-<p><img src="../resources/generator-ionic.png" style="height:260px" /></p>
+<p><img src="./resources/generator-ionic.png" style="height:260px" /></p>
 
 <p>
 Yeoman generator for creating Ionic hybrid mobile applications using AngularJS and Cordova - lets you quickly set up a project with sensible defaults and best practices.
