--- a/slides/ionic-2.html
+++ b/slides/ionic-2.html
@@ -1,5 +1,5 @@
 
 <p>
-    <img src="../resources/ionic-2-beta.png" style="width:100%;" />
+    <img src="./resources/ionic-2-beta.png" style="width:100%;" />
 </p>
 <h2>Ionic 2</h2>
