--- a/slides/ionic-box.html
+++ b/slides/ionic-box.html
@@ -1,6 +1,6 @@
 <h2 class="hide">Ionic Box</h2>
 
-<p><img src="../resources/ionicbox-header.png" style="height:160px" /></p>
+<p><img src="./resources/ionicbox-header.png" style="height:160px" /></p>
 
 <p>
 Ionic Box is a ready-to-go hybrid development environment (based on Vagrant) for building mobile apps with Ionic, Cordova, and Android.
