--- a/slides/ionic-components.html
+++ b/slides/ionic-components.html
@@ -1,7 +1,7 @@
 <h2>Tabs, Navigation, Menus and more...</h2>
 
 <p>
-    <img src="../resources/ionic-components.png" class="capture" />
+    <img src="./resources/ionic-components.png" class="capture" />
 </p>
 
 <p>
