--- a/slides/ionic-emulate-map-ios.html
+++ b/slides/ionic-emulate-map-ios.html
@@ -1,7 +1,7 @@
 <h2>iPhone 6 Emulation</h2>
 
 <p>
-    <img src="../resources/ionic-emulate-map-ios.png" class="capture" />
+    <img src="./resources/ionic-emulate-map-ios.png" class="capture" />
 </p>
 
 <p>
