--- a/slides/ionic-framework-doc.html
+++ b/slides/ionic-framework-doc.html
@@ -1,7 +1,7 @@
 <h2 class="hide">What is Ionic Framework?</h2>
 
 <p>
-    <img src="./resources/ionic-logo.png" style="width:200px;" />
+    <img src=./resources/ionic-logo.png" style="width:200px;" />
 </p>
 
 <p>
