--- a/slides/ionic-framework.html
+++ b/slides/ionic-framework.html
@@ -1,6 +1,6 @@
 
 <p>
-    <img src="./resources/ionic-logo.png" style="width:200px;" />
+    <img src=./resources/ionic-logo.png" style="width:200px;" />
 </p>
 
 <h2>Open Talk on Ionic Framework</h2>
