--- a/slides/ionic-material.html
+++ b/slides/ionic-material.html
@@ -1,7 +1,7 @@
 <h2>Look & Feel</h2>
 
 <p>
-    <img src="../resources/ionic-material.png" class="capture" />
+    <img src="./resources/ionic-material.png" class="capture" />
 </p>
 
 <p>
