--- a/slides/nodejs.html
+++ b/slides/nodejs.html
@@ -1,6 +1,6 @@
 <h2 class="hide">NodeJS</h2>
 
-<p><img src="../resources/node-npm.png" style="height:160px" /></p>
+<p><img src="./resources/node-npm.png" style="height:160px" /></p>
 
 <p>
 Server side javascript and it's package manager.
