--- a/slides/publish-android-market.html
+++ b/slides/publish-android-market.html
@@ -2,9 +2,9 @@
 
 <p>
     <span style="float:right">
-    <img style="display:block; width: 300px;" src="./resources/demo-android-app.png" />
+    <img style="display:block; width: 300px;" src=./resources/demo-android-app.png" />
     <a href="https://play.google.com/store/apps/details?id=com.ionicframework.sopadeletras104230&hl=es_419">
-        <img style="display:block; height: 60px;" src="./resources/google-play.png" />
+        <img style="display:block; height: 60px;" src=./resources/google-play.png" />
     </a>
     </span>
 </p>
