--- a/slides/stack-overflow-survey-2015.html
+++ b/slides/stack-overflow-survey-2015.html
@@ -1,6 +1,6 @@
 <h2 class="hide">Stack Overflow Survey 2015</h2>
 
-<p><img src="../resources/developer-survey-2015-work-mobile.png" style="height:560px" /></p>
+<p><img src="./resources/developer-survey-2015-work-mobile.png" style="height:560px" /></p>
 
 
 
