--- a/slides/all-phones.html
+++ b/slides/all-phones.html
@@ -1,4 +1,4 @@
 
 <p>
-    <img src="../resources/all-phones.jpg" style="width:100%;" />
+    <img src="./resources/all-phones.jpg" style="width:100%;" />
 </p>
