--- a/slides/angular-2.html
+++ b/slides/angular-2.html
@@ -1,6 +1,6 @@
 
 <p>
-    <img src="../resources/angular2.png" style="width:50%;" />
+    <img src="./resources/angular2.png" style="width:50%;" />
 </p>
 
 <h2>Angular 2</h2>
