--- a/slides/continuous-deployment.html
+++ b/slides/continuous-deployment.html
@@ -1,7 +1,7 @@
 <h2>Continuous Deployment</h2>
 
 <p>
-    <img src="../resources/circle-ci-ionic.png" class="capture" />
+    <img src="./resources/circle-ci-ionic.png" class="capture" />
 </p>
 
 <p>
