--- a/slides/gulpjs.html
+++ b/slides/gulpjs.html
@@ -1,6 +1,6 @@
 <h2 class="hide">GulpJS</h2>
 
-<p><img src="../resources/gulp.jpg" style="height:160px" /></p>
+<p><img src="./resources/gulp.jpg" style="height:160px" /></p>
 
 <p>
 Gulp is a javascript task runner that lets you automate tasks such as building, minifying, live reload, pre-process files and more...
