--- a/slides/html5.html
+++ b/slides/html5.html
@@ -1,6 +1,6 @@
 <h2 class="hide">HTML5 & CSS3</h2>
 
-<p><img src="../resources/html5-css3.png" style="height:220px" /></p>
+<p><img src="./resources/html5-css3.png" style="height:220px" /></p>
 
 <p>
 Local Storage, Audio, Video, Animations...
