--- a/slides/ionic-leaftlet-running.html
+++ b/slides/ionic-leaftlet-running.html
@@ -1,6 +1,6 @@
 <h2>Map Demo And Running</h2>
 
 <p>
-    <img src="../resources/leaflet-map-demo.png" class="capture" />
+    <img src="./resources/leaflet-map-demo.png" class="capture" />
 </p>
 
