--- a/slides/ionic-market-search.html
+++ b/slides/ionic-market-search.html
@@ -1,7 +1,7 @@
 <h2>Ionic Market</h2>
 
 <p>
-    <img src="../resources/ionic-market-purchase.png" class="capture" />
+    <img src="./resources/ionic-market-purchase.png" class="capture" />
 </p>
 
 <p>
