--- a/slides/ionic-view.html
+++ b/slides/ionic-view.html
@@ -1,7 +1,7 @@
 <h2>Quick Sharing</h2>
 
 <p>
-    <img src="../resources/ionic-view.png" class="capture" />
+    <img src="./resources/ionic-view.png" class="capture" />
 </p>
 
 <p>
