--- a/slides/sass.html
+++ b/slides/sass.html
@@ -1,6 +1,6 @@
 <h2 class="hide">Sass</h2>
 
-<p><img src="../resources/sass.png" style="height:160px" /></p>
+<p><img src="./resources/sass.png" style="height:160px" /></p>
 
 <p>
 An extension of CSS that adds power and elegance to the basic language. It allows to use variables, nested rules, mixins, inline imports, and more...
