--- a/slides/stack-overflow-survey-2016.html
+++ b/slides/stack-overflow-survey-2016.html
@@ -1,6 +1,6 @@
 <h2 class="hide">Stack Overflow Survey 2016</h2>
 
-<p><img src="../resources/developer-survey-2016-top-paying-tech-per-occupation.png" style="height:560px" /></p>
+<p><img src="./resources/developer-survey-2016-top-paying-tech-per-occupation.png" style="height:560px" /></p>
 
 
 
