--- a/slides/typescript-es6.html
+++ b/slides/typescript-es6.html
@@ -1,5 +1,5 @@
 <h2>TypeScript</h2>
 
 <p>
-    <img src="../resources/es5-es6-typescript-circle-diagram.png" style="width:50%;" />
+    <img src="./resources/es5-es6-typescript-circle-diagram.png" style="width:50%;" />
 </p>
