--- a/slides/final.html
+++ b/slides/final.html
@@ -1,6 +1,6 @@
 <h2>Stay in touch:</h2>
 <div>
-    <img src=./resources/crisboot.png">
+    <img src="./resources/crisboot.png">
     <br>
 </div>
 <div>
