--- a/slides/speaker.html
+++ b/slides/speaker.html
@@ -1,6 +1,6 @@
 
 <div class="col-25">
-    <img src=./resources/speaker.jpg" alt="@cortezcristian" class="profile" />
+    <img src="./resources/speaker.jpg" alt="@cortezcristian" class="profile" />
 </div>
 <div class="col-75" style="padding: 10px">
     <h2>Cristian Cortez</h2>
